naked girl in about. optimized image render, change app navigation. fixes

--- a/app/src/main/assets/changelog.txt
+++ b/app/src/main/assets/changelog.txt
@@ -3,6 +3,9 @@
 [-] - Исправлена ошибка
 [*] - Изменено
 
+--- [1.1.5] ---
+[-] Исправлена кликабельность свитчей на Android ниже 8
+
 --- [1.1.4] ---
 [+] Апдейтер
 [*] Акцент в чёрной теме
