ability to create a multiple instances of one fragment. ui changes, crash fixes

--- a/app/src/main/assets/changelog.txt
+++ b/app/src/main/assets/changelog.txt
@@ -3,6 +3,22 @@
 [-] - Исправлена ошибка
 [*] - Изменено
 
+--- [2.0.0] ---
+[!] Данные вкладок теперь создаются и хранятся в ОЗУ
+[!] Необходимо переназначить настройки
+[!] Изменена структура приложения (для удобного управления вкладками)
+[+] Вкладки - создание 2-х и более одинаковых правил
+[+] Удаление правил в правом дровере, добавление в левом
+[+] Подсветка ASSIGN, ADD_FILES, GOTO
+[+] Скрытие клавиатуры при открытии дровера
+[-] Работа с локалью на Android 8+
+[*] Пункты: REGEXP, Настройки, О программе перенесены в header левого дровера
+[*] Удалено меню
+[*] Изменен вид предпросмотра патча. Действия с патчем вынесены в заголовок диалога
+[*] Блюр в About
+[*] Улучшен интерфейс
+[*] Повышена стабильность
+
 --- [1.1.5] ---
 [-] Исправлена кликабельность свитчей на Android ниже 8
 
