--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -199,4 +199,5 @@
     <string name="match_tags">Match тэги</string>
     <string name="other">Прочее</string>
     <string name="tags">Тэги</string>
+    <string name="expand">Развернуть</string>
 </resources>
