--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -217,5 +217,6 @@
     <string name="tags">Tags</string>
     <string name="other">Other</string>
     <string name="expand">Expand</string>
+    <string name="i_read">I read</string>
 
 </resources>
