--- a/app/src/main/assets/changelog.txt
+++ b/app/src/main/assets/changelog.txt
@@ -10,6 +10,7 @@
 [+] Вкладки - создание 2-х и более одинаковых правил
 [+] Удаление правил в правом дровере, добавление в левом
 [+] Подсветка ASSIGN, ADD_FILES, GOTO
+[+] Экран помощи (появляется при первом запуске, повторно можно просмотреть в О программе -> Помощь)
 [+] Скрытие клавиатуры при открытии дровера
 [-] Работа с локалью на Android 8+
 [*] Пункты: REGEXP, Настройки, О программе перенесены в header левого дровера
