--- a/app/src/main/assets/changelog.txt
+++ b/app/src/main/assets/changelog.txt
@@ -4,18 +4,21 @@
 [*] - Изменено
 
 --- [2.0.0] ---
+[!] Изменён метод создания патча
 [!] Данные вкладок теперь создаются и хранятся в ОЗУ
 [!] Необходимо переназначить настройки
 [!] Изменена структура приложения (для удобного управления вкладками)
-[+] Вкладки - создание 2-х и более одинаковых правил
+[+] Вкладки - создание 2-х и более одинаковых правил (спасибо RadiationX)
 [+] Удаление правил в правом дровере, добавление в левом
 [+] Подсветка ASSIGN, ADD_FILES, GOTO
 [+] Экран помощи (появляется при первом запуске, повторно можно просмотреть в О программе -> Помощь)
 [+] Скрытие клавиатуры при открытии дровера
 [-] Работа с локалью на Android 8+
+[*] Пережата PNG графика (конвертация в WEBP)
 [*] Пункты: REGEXP, Настройки, О программе перенесены в header левого дровера
 [*] Удалено меню
 [*] Изменен вид предпросмотра патча. Действия с патчем вынесены в заголовок диалога
+[*] Информация о RadiationX в About скрине
 [*] Блюр в About
 [*] Улучшен интерфейс
 [*] Повышена стабильность
