Top toolbar navigation, layout fixes. Fixed update installation on android 8 (oreo)

--- a/app/src/main/assets/changelog.txt
+++ b/app/src/main/assets/changelog.txt
@@ -3,6 +3,12 @@
 [-] - Исправлена ошибка
 [*] - Изменено
 
+--- [2.0.1] ---
+[*] Фиксы разметки
+[*] Акцент при нажатии в чёрной теме
+[*] Обновлены библиотеки
+[*] Удалены неиспользуемые библиотеки
+
 --- [2.0.0] ---
 [!] Изменён метод создания патча
 [!] Данные вкладок теперь создаются и хранятся в ОЗУ
