basic full editor code

--- a/app/src/main/assets/changelog.txt
+++ b/app/src/main/assets/changelog.txt
@@ -4,6 +4,8 @@
 [*] - Изменено
 
 --- [2.0.1] ---
+[+] Счётчик вкладок
+[-] Неправильная локаль при первом запуске
 [*] Фиксы разметки
 [*] Акцент при нажатии в чёрной теме
 [*] Обновлены библиотеки
