--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="menu_fullview">Full view</string>
     <string name="menu_savepatch">Save patch</string>
     <string name="menu_reset">Reset</string>
-    <string name="menu_regexp">REGEXP</string>
+    <string name="menu_regexp">Regular expressions</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_about">About</string>
     <string name="menu_flags">Flags</string>
@@ -30,7 +30,7 @@
     <string name="title_filename">File name</string>
     <string name="title_zip_filename">Zip file name</string>
     <string name="title_list_of_rules">List of rules</string>
-    <string name="title_regexp_flags">REGEXP flags</string>
+    <string name="title_regexp_flags">Regexp flags</string>
     <!-- Hints -->
     <string name="hint_comment">Comment</string>
     <string name="hint_author">Author</string>
@@ -90,7 +90,7 @@
     <string name="tab_dummy" translatable="false">dummy</string>
     <!--Tabs TRANSLATABLE-->
     <string name="tab_help">Quick help</string>
-    <string name="tab_regex">REGEXP</string>
+    <string name="tab_regex">Regexp tester</string>
     <string name="tab_documentation">Documentation</string>
     <!--About-->
     <string name="about_version">Version: %s</string>
