--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -123,4 +123,5 @@
     <string name="hint_param">"Parametre"</string>
     <string name="hint_entrance">"Giriş yöntemi"</string>
     <string name="subtitle_tab_executor">"Özel komut dosyaları yürütme"</string>
+    <string name="rule_is_empty">This rule is empty</string>
 </resources>
